코드 한 곳에 몰아넣기

--- a/chat.ipynb
+++ b/chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 974,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 975,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 976,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 977,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 978,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 979,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 980,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 981,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 958,
+   "execution_count": 982,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 983,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": 984,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 961,
+   "execution_count": 985,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 962,
+   "execution_count": 986,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 963,
+   "execution_count": 987,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 964,
+   "execution_count": 988,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 965,
+   "execution_count": 989,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 966,
+   "execution_count": 990,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 967,
+   "execution_count": 991,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 992,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 993,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 970,
+   "execution_count": 994,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,16 +982,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 971,
+   "execution_count": 995,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x179306b7370>"
+       "<langgraph.graph.state.StateGraph at 0x1792fde5de0>"
       ]
      },
-     "execution_count": 971,
+     "execution_count": 995,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 972,
+   "execution_count": 996,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,27 +1059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 997,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+++++++++++++++++++++++++++++++++\n",
-      "매물_1\n",
-      "보증금: 5,000,000원\n",
-      "월세: 400,000원\n",
-      "정보: ☆즉시 이사 가능☆ ☆옥상 사용 가능 ~ ☆ 미리 연락주시면 원하시는 시간에 맞춰 볼 수 있어요~ 고객이 원하는 물건 최선을 다해 찾아드립니다. 초록부동산 02-6013-2748 010-5261-5334\n",
-      "+++++++++++++++++++++++++++++++++\n",
-      "\n",
-      "+++++++++++++++++++++++++++++++++\n",
-      "매물_2\n",
-      "보증금: 10,000,000원\n",
-      "월세: 450,000원\n",
-      "정보: ☆즉시 이사 가능☆ ☆사업자, 주거 동시 가능 ~ ☆ 미리 연락주시면 원하시는 시간에 맞춰 볼 수 있어요~ 고객이 원하는 물건 최선을 다해 찾아드립니다. 초록부동산 02-6013-2748 010-5261-5334\n",
-      "+++++++++++++++++++++++++++++++++\n",
-      "\n"
+      "검색 결과가 없습니다.\n"
      ]
     },
     {
@@ -1121,6 +1108,37 @@
     "\n",
     "workflow_image = app.get_graph().draw_mermaid_png()\n",
     "display(Image(workflow_image))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 999,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT \n",
+      "    r.property_id,\n",
+      "    l.sigungu,\n",
+      "    p.description,\n",
+      "    r.deposit AS \"보증금\",\n",
+      "    l.latitude,\n",
+      "    l.longitude\n",
+      "FROM rentals r\n",
+      "JOIN property_info p ON r.property_id = p.property_id\n",
+      "JOIN property_locations l ON p.property_location_id = l.property_location_id\n",
+      "WHERE l.dong LIKE '%사당%'\n",
+      "AND p.facilities LIKE '%엘리베이터%'\n",
+      "AND r.rental_type = 'MONTHLY'\n",
+      "AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) <= 200000000\n",
+      "LIMIT 5;\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result['query_sql'])"
    ]
   }
  ],
