--- a/chat.ipynb
+++ b/chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 974,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 975,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 976,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 977,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 978,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 979,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 980,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 981,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 982,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 983,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 984,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 985,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 986,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 987,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 988,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 989,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 990,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 991,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 992,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 993,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 994,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,16 +982,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 995,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1792fde5de0>"
+       "<langgraph.graph.state.StateGraph at 0x262c8ade500>"
       ]
      },
-     "execution_count": 995,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 996,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 997,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 999,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1129,16 +1129,314 @@
       "FROM rentals r\n",
       "JOIN property_info p ON r.property_id = p.property_id\n",
       "JOIN property_locations l ON p.property_location_id = l.property_location_id\n",
-      "WHERE l.dong LIKE '%사당%'\n",
-      "AND p.facilities LIKE '%엘리베이터%'\n",
+      "WHERE l.dong LIKE '%송파역%'\n",
       "AND r.rental_type = 'MONTHLY'\n",
-      "AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) <= 200000000\n",
+      "AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) = 500000000\n",
+      "ORDER BY ABS(l.latitude) + ABS(l.longitude) ASC\n",
       "LIMIT 5;\n"
      ]
     }
    ],
    "source": [
     "print(result['query_sql'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Location': '송파역', 'Property Type': '오피스텔', 'Price': '5억', 'Transaction Type': '전세', 'Property Features': '없음', 'User Preferences': '없음', 'Cultural/Facilities': '없음', 'Safety and Crime Data': '없음'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result['keywordlist'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CREATE TABLE addresses (\n",
+      "\taddress_id INTEGER NOT NULL, \n",
+      "\tarea_name VARCHAR(100) NOT NULL, \n",
+      "\tlatitude FLOAT, \n",
+      "\tlongitude FLOAT, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE api_search_data (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tapi_name VARCHAR(100) NOT NULL, \n",
+      "\tparameter VARCHAR(500), \n",
+      "\tresponse VARCHAR, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE chat_logs (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tuser_uuid CHAR(36) NOT NULL, \n",
+      "\tsession_id CHAR(36) NOT NULL, \n",
+      "\tmessage_type VARCHAR(4) NOT NULL, \n",
+      "\tmessage TEXT NOT NULL, \n",
+      "\tcreated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(user_uuid) REFERENCES users (uuid)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE crime_stats (\n",
+      "\tstat_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER, \n",
+      "\treference_date VARCHAR(8), \n",
+      "\ttotal_population FLOAT, \n",
+      "\tcrime_category VARCHAR(50) NOT NULL, \n",
+      "\tcrime_subcategory VARCHAR(50) NOT NULL, \n",
+      "\tincident_count INTEGER NOT NULL, \n",
+      "\tcrime_rate FLOAT, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (stat_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE cultural_facilities (\n",
+      "\tfacility_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER, \n",
+      "\tfacility_name VARCHAR(100) NOT NULL, \n",
+      "\tfacility_type VARCHAR(50) NOT NULL, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (facility_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE cultural_festivals (\n",
+      "\tfestival_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER, \n",
+      "\tfestival_name VARCHAR(100) NOT NULL, \n",
+      "\tbegin_date VARCHAR(10), \n",
+      "\tend_date VARCHAR(10), \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (festival_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE favorites (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tuser_uuid CHAR(36) NOT NULL, \n",
+      "\titem_id INTEGER NOT NULL, \n",
+      "\titem_type VARCHAR(50) NOT NULL, \n",
+      "\tname VARCHAR(255) NOT NULL, \n",
+      "\tlatitude DECIMAL(10, 7), \n",
+      "\tlongitude DECIMAL(10, 7), \n",
+      "\tcreated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(user_uuid) REFERENCES users (uuid), \n",
+      "\tFOREIGN KEY(item_id) REFERENCES property_info (property_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE feedback (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tuser_uuid CHAR(36) NOT NULL, \n",
+      "\thomepage_rating INTEGER NOT NULL, \n",
+      "\tq1_accuracy INTEGER NOT NULL, \n",
+      "\tq2_naturalness INTEGER NOT NULL, \n",
+      "\tq3_resolution INTEGER NOT NULL, \n",
+      "\tfeedback_text TEXT, \n",
+      "\tcreated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(user_uuid) REFERENCES users (uuid)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE location_distances (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tproperty_location_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER NOT NULL, \n",
+      "\tdistance FLOAT NOT NULL, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(property_location_id) REFERENCES property_locations (property_location_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE notices (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\ttitle VARCHAR(255) NOT NULL, \n",
+      "\tcontent TEXT NOT NULL, \n",
+      "\tauthor_id CHAR(36) NOT NULL, \n",
+      "\tcreated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tupdated_at DATETIME, \n",
+      "\tstatus VARCHAR(8) NOT NULL, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(author_id) REFERENCES users (uuid)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE population_stats (\n",
+      "\tstat_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER, \n",
+      "\tcollection_time DATETIME NOT NULL, \n",
+      "\tpopulation_level VARCHAR(50), \n",
+      "\tpopulation_message TEXT, \n",
+      "\tmin_population INTEGER, \n",
+      "\tmax_population INTEGER, \n",
+      "\tmale_ratio FLOAT, \n",
+      "\tfemale_ratio FLOAT, \n",
+      "\tage_0_9_ratio FLOAT, \n",
+      "\tage_10s_ratio FLOAT, \n",
+      "\tage_20s_ratio FLOAT, \n",
+      "\tage_30s_ratio FLOAT, \n",
+      "\tage_40s_ratio FLOAT, \n",
+      "\tage_50s_ratio FLOAT, \n",
+      "\tage_60s_ratio FLOAT, \n",
+      "\tage_70s_ratio FLOAT, \n",
+      "\tresident_ratio FLOAT, \n",
+      "\tnon_resident_ratio FLOAT, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (stat_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE property_info (\n",
+      "\tproperty_id INTEGER NOT NULL, \n",
+      "\tproperty_location_id INTEGER NOT NULL, \n",
+      "\tproperty_type VARCHAR(13), \n",
+      "\tproperty_subtype VARCHAR(13), \n",
+      "\tbuilding_name VARCHAR(100), \n",
+      "\tdetail_address VARCHAR(200), \n",
+      "\tconstruction_date VARCHAR(10), \n",
+      "\ttotal_area DECIMAL(10, 2), \n",
+      "\texclusive_area DECIMAL(10, 2), \n",
+      "\tland_area DECIMAL(10, 2), \n",
+      "\tfloor INTEGER, \n",
+      "\ttotal_floor INTEGER, \n",
+      "\tbasement_floor INTEGER, \n",
+      "\troom_count INTEGER, \n",
+      "\tbathroom_count INTEGER, \n",
+      "\tparking_count INTEGER, \n",
+      "\theating_type VARCHAR(16), \n",
+      "\tdirection VARCHAR(20), \n",
+      "\tpurpose_type VARCHAR(20), \n",
+      "\tcurrent_usage VARCHAR(100), \n",
+      "\trecommended_usage VARCHAR(100), \n",
+      "\tfacilities JSON, \n",
+      "\tdescription TEXT, \n",
+      "\tphotos JSON, \n",
+      "\tupdate_count INTEGER, \n",
+      "\tis_active BOOLEAN, \n",
+      "\tinactive_reason VARCHAR(200), \n",
+      "\tfirst_seen DATETIME, \n",
+      "\tlast_seen DATETIME, \n",
+      "\tPRIMARY KEY (property_id), \n",
+      "\tFOREIGN KEY(property_location_id) REFERENCES property_locations (property_location_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE property_locations (\n",
+      "\tproperty_location_id INTEGER NOT NULL, \n",
+      "\tsido VARCHAR(20) NOT NULL, \n",
+      "\tsigungu VARCHAR(20) NOT NULL, \n",
+      "\tdong VARCHAR(20), \n",
+      "\tjibun_main VARCHAR(20), \n",
+      "\tjibun_sub VARCHAR(20), \n",
+      "\tis_mountain BOOLEAN NOT NULL, \n",
+      "\tlatitude DECIMAL(10, 7) NOT NULL, \n",
+      "\tlongitude DECIMAL(10, 7) NOT NULL, \n",
+      "\tPRIMARY KEY (property_location_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE rentals (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tproperty_id INTEGER NOT NULL, \n",
+      "\trental_type VARCHAR(11) NOT NULL, \n",
+      "\tdeposit DECIMAL(10, 2) NOT NULL, \n",
+      "\tmonthly_rent DECIMAL(10, 2) NOT NULL, \n",
+      "\tmaintenance_cost_info JSON, \n",
+      "\tloan_availability VARCHAR(13), \n",
+      "\tmove_in_type VARCHAR(12), \n",
+      "\tnegotiable BOOLEAN, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(property_id) REFERENCES property_info (property_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE sales (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tproperty_id INTEGER NOT NULL, \n",
+      "\tprice DECIMAL(10, 2) NOT NULL, \n",
+      "\tmaintenance_cost_info JSON, \n",
+      "\tloan_availability VARCHAR(13), \n",
+      "\tmove_in_type VARCHAR(12), \n",
+      "\tnegotiable BOOLEAN, \n",
+      "\ttransaction_date DATETIME, \n",
+      "\tend_date DATETIME, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(property_id) REFERENCES property_info (property_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE subway_stations (\n",
+      "\tstation_id INTEGER NOT NULL, \n",
+      "\taddress_id INTEGER, \n",
+      "\tline_info VARCHAR(20) NOT NULL, \n",
+      "\tcreated_at DATETIME, \n",
+      "\tPRIMARY KEY (station_id), \n",
+      "\tFOREIGN KEY(address_id) REFERENCES addresses (address_id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE user_actions (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tuser_uuid CHAR(36), \n",
+      "\tsession_id CHAR(36) NOT NULL, \n",
+      "\taction_type VARCHAR(50) NOT NULL, \n",
+      "\taction_time DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tpage_url VARCHAR(255) NOT NULL, \n",
+      "\treferrer_url VARCHAR(255), \n",
+      "\tdevice_info VARCHAR(255) NOT NULL, \n",
+      "\tlocation VARCHAR(255), \n",
+      "\tevent_details JSON, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(user_uuid) REFERENCES users (uuid)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "CREATE TABLE users (\n",
+      "\tuuid CHAR(36) NOT NULL, \n",
+      "\tgender VARCHAR(1) NOT NULL, \n",
+      "\tage INTEGER NOT NULL, \n",
+      "\tage_group VARCHAR(10) NOT NULL, \n",
+      "\tdesired_location VARCHAR(255) NOT NULL, \n",
+      "\tcreated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tupdated_at DATETIME DEFAULT CURRENT_TIMESTAMP NOT NULL, \n",
+      "\tPRIMARY KEY (uuid)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db.get_table_info())"
    ]
   }
  ],
