--- a/chat.ipynb
+++ b/chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,8 +941,9 @@
     "\n",
     "    # 코드 블록(````json ... `````) 제거\n",
     "    if query.startswith(\"```json\") and query.endswith(\"```\"):\n",
-    "        query = query[7:-3].strip()  # \"```sql\" 제거 후 앞뒤 공백 제거\n",
-    "    \n",
+    "        query = query[7:-3].strip()  # \"```json\" 제거 후 앞뒤 공백 제거\n",
+    "    else:\n",
+    "        return RealEstateState(query_answer=query)\n",
     "    json_list = json.loads(query)\n",
     "\n",
     "    # 상태 업데이트\n",
@@ -951,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +972,7 @@
     "    for _, value in answer.items():\n",
     "        response = llm.invoke([\n",
     "            SystemMessage(content=prompt),\n",
-    "            HumanMessage(content=f\"컨텍스트: {value['description']}\\n\\n질문: {query}\\n\\n각 부동산 매물에 대해 관련된 세계 지식과 흥미로운 사실을 추가해주세요.\")\n",
+    "            HumanMessage(content=f\"컨텍스트: {value['description']}\\n\\n질문: {query}\\n\\n위 컨텍스트에 대해 관련된 부동산 지식과 이쁘게 말을 추가해주세요.\")\n",
     "        ])\n",
     "        print(response.content)\n",
     "        value['description'] = response.content\n",
@@ -982,16 +983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x262c8ade500>"
+       "<langgraph.graph.state.StateGraph at 0x22613fe7640>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,14 +1060,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "검색 결과가 없습니다.\n"
+      "+++++++++++++++++++++++++++++++++\n",
+      "매물_1\n",
+      "보증금: 5,000,000원\n",
+      "월세: 400,000원\n",
+      "정보: ☆즉시 이사 가능☆ ☆옥상 사용 가능 ~ ☆ 미리 연락주시면 원하시는 시간에 맞춰 볼 수 있어요~ ☆ ■□ 고객이 원하는 물건 최선을 다해 찾아드립니다. □■ □■ 초록부동산 02-6013-2748 010-5261-5334 ■□\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "매물_2\n",
+      "보증금: 5,000,000원\n",
+      "월세: 600,000원\n",
+      "정보: ◈강서구청상권 도로 노출최상 ◈ 【모든 업종 환영】 ▶화곡동 상가 사무실 전문◀ ▶초록부동산 02-6013-2748 010-5261-5334◀\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "매물_3\n",
+      "보증금: 7,000,000원\n",
+      "월세: 600,000원\n",
+      "정보: ◈전용8평 1층 노출 굿◈ 【모든 업종 환영】 ▶화곡동 상가 사무실 전문◀ ▶초록부동산 02-6013-2748 010-5261-5334◀\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "매물_4\n",
+      "보증금: 10,000,000원\n",
+      "월세: 450,000원\n",
+      "정보: ☆즉시 이사 가능☆ ☆사업자, 주거 동시 가능 ~ ☆ 미리 연락주시면 원하시는 시간에 맞춰 볼 수 있어요~ ☆ ■□ 고객이 원하는 물건 최선을 다해 찾아드립니다. □■ □■ 초록부동산 02-6013-2748 010-5261-5334 ■□\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "매물_5\n",
+      "보증금: 63,600,000원\n",
+      "월세: 100,000원\n",
+      "정보: ☆즉시 이사 가능☆ ☆평지 투룸 전체수리깔끔 ☆ 미리 연락주시면 원하시는 시간에 맞춰 볼 수 있어요~ ☆ ■□ 고객이 원하는 물건 최선을 다해 찾아드립니다. □■ □■ 초록부동산 02-6013-2748 010-5261-5334 ■□\n",
+      "+++++++++++++++++++++++++++++++++\n",
+      "\n"
      ]
     },
     {
@@ -1112,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1124,15 +1159,16 @@
       "    l.sigungu,\n",
       "    p.description,\n",
       "    r.deposit AS \"보증금\",\n",
+      "    r.monthly_rent AS \"월세비\",\n",
       "    l.latitude,\n",
       "    l.longitude\n",
       "FROM rentals r\n",
       "JOIN property_info p ON r.property_id = p.property_id\n",
       "JOIN property_locations l ON p.property_location_id = l.property_location_id\n",
-      "WHERE l.dong LIKE '%송파역%'\n",
-      "AND r.rental_type = 'MONTHLY'\n",
-      "AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) = 500000000\n",
-      "ORDER BY ABS(l.latitude) + ABS(l.longitude) ASC\n",
+      "WHERE l.sigungu LIKE '%강서구%'\n",
+      "AND r.rental_type = 'YEARLY'\n",
+      "AND CAST(REPLACE(r.monthly_rent, ',', '') AS INTEGER) <= 60 * 10000\n",
+      "ORDER BY CAST(REPLACE(r.deposit, ',', '') AS INTEGER) ASC, CAST(REPLACE(r.monthly_rent, ',', '') AS INTEGER) ASC\n",
       "LIMIT 5;\n"
      ]
     }
@@ -1143,24 +1179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Location': '송파역', 'Property Type': '오피스텔', 'Price': '5억', 'Transaction Type': '전세', 'Property Features': '없음', 'User Preferences': '없음', 'Cultural/Facilities': '없음', 'Safety and Crime Data': '없음'}\n"
+      "content='강서구 월세60추천해줘' additional_kwargs={} response_metadata={} id='8658dcac-4517-42c7-bf6a-25e4f113ac07'\n"
      ]
     }
    ],
    "source": [
-    "print(result['keywordlist'])"
+    "print(result['messages'][-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
